--- a/tlweb/templates/index.html
+++ b/tlweb/templates/index.html
@@ -1,5 +1,9 @@
 {% include 'parts/top.html' %}
+<header>Use for free</header>
 <main>
-    <h1>Live Translator</h1>
+    <h1>Try TranslatorBot Online</h1>
+
+    <textarea placeholder="Type your text in here..."></textarea>
+
 </main>
 {% include 'parts/end.html' %}
